# bread-ecosystem

./: BREAD_DESIGN_SYSTEM.md  Cargo.toml  README.md  bakery.toml
.forgejo/workflows/: mirror.yml  package.yml
.github/workflows/: release.yml
bakery/: Cargo.toml
bakery/src/: doctor.rs  download.rs  install.rs  main.rs  manifest.rs  state.rs
bread-theme/: CHANGELOG.md  Cargo.toml
bread-theme/src/: gtk.rs  lib.rs  palette.rs
packaging/arch/: PKGBUILD
registry/: bread-ecosystem.toml
scripts/: gen-index.sh  get.sh  test-gen-index.sh
