[workspace]
members = ["bakery", "bread-theme"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Breadway <rileyhorsham@gmail.com>"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
ureq = { version = "2", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive", "env"] }
chrono = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
